# mahjong_soul_api

./: .gitignore  README.md  example.py  example_admin.py  main.py  pyproject.toml  setup.sh
examples/: majsoul_bot.ini.example
ms/: base.py  majsoul.py  majsoul_server_information.py  ms-plugin.py  protocol_pb2.py  rpc.py  server_info.py
ms_tournament/: base.py  generate_proto_file.py  ms-admin-plugin.py  rpc.py
setup/: generate_proto_file.py  liqi.json
