[tool.poetry]
name = "mahjong_soul_api"
version = "0.1.0"
description = ""
authors = ["makersmelx <makersmelx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
protobuf = "3.18.0"
websockets = "10.0"
aiohttp = "3.7.4.post0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
